refactor : validate 추가 & 정적 팰터리 메서드를 이용하여 클라이언트 코드 중복 제거