@@ -2,12 +2,10 @@ package webserver.http.response;
 
 import webserver.http.Header;
 import webserver.http.HeaderKey;
-import webserver.http.request.requestline.Protocol;
-import webserver.http.request.requestline.ProtocolType;
-import webserver.http.request.requestline.Version;
 import webserver.http.response.statusline.StatusCode;
 import webserver.http.response.statusline.StatusLine;
 
+import java.util.Collections;
 import java.util.Map;
 
 public class HttpResponse {
@@ -23,6 +21,23 @@ public class HttpResponse {
         this.body = body;
     }
 
+    private static void validate(StatusLine statusLine, Header header) {
+        validateStatusLine(statusLine);
+        validateHeader(header);
+    }
+
+    private static void validateHeader(Header header) {
+        if (header == null) {
+            throw new IllegalArgumentException("응답 헤더는 null 일 수 없습니다.");
+        }
+    }
+
+    private static void validateStatusLine(StatusLine statusLine) {
+        if (statusLine == null) {
+            throw new IllegalArgumentException("응답 라인은 null 일 수 없습니다.");
+        }
+    }
+
     public static HttpResponse of(StatusLine statusLine, Header header, byte[] body) {
         return new HttpResponse(statusLine, header, body);
     }
@@ -32,19 +47,19 @@ public class HttpResponse {
     }
 
     public static HttpResponse ok(Header header, byte[] body) {
-        return new HttpResponse(StatusLine.of(new Protocol(ProtocolType.HTTP, Version.ONE_ONE), StatusCode.OK), header, body);
+        return new HttpResponse(StatusLine.ofHttp_V1_1_Ok(), header, body);
     }
 
     public static HttpResponse notFound() {
-        return new HttpResponse(StatusLine.of(new Protocol(ProtocolType.HTTP, Version.ONE_ONE), StatusCode.NOT_FOUND), new Header(Map.of()), new byte[0]);
+        return new HttpResponse(StatusLine.ofHttp_V1_1_NotFound(), new Header(Collections.emptyMap()), new byte[0]);
     }
 
     public static HttpResponse redirect(String path) {
-        return new HttpResponse(StatusLine.of(new Protocol(ProtocolType.HTTP, Version.ONE_ONE), StatusCode.FOUND), new Header(Map.of(HeaderKey.LOCATION, path)), new byte[0]);
+        return new HttpResponse(StatusLine.ofHttp_V1_1_Found(), new Header(Map.of(HeaderKey.LOCATION, path)), new byte[0]);
     }
 
     public static HttpResponse redirect(String path, Header header) {
-        return new HttpResponse(StatusLine.of(new Protocol(ProtocolType.HTTP, Version.ONE_ONE), StatusCode.FOUND), header.add(HeaderKey.LOCATION, path), new byte[0]);
+        return new HttpResponse(StatusLine.ofHttp_V1_1_Found(), header.add(HeaderKey.LOCATION, path), new byte[0]);
     }
 
     public String response() {
@@ -64,22 +79,5 @@ public class HttpResponse {
 
     public boolean isStatusCodeEqual(StatusCode statusCode) {
         return this.statusLine.isStatusCodeEqual(statusCode);
-    }
-
-    private static void validate(StatusLine statusLine, Header header) {
-        validateStatusLine(statusLine);
-        validateHeader(header);
-    }
-
-    private static void validateHeader(Header header) {
-        if (header == null) {
-            throw new IllegalArgumentException("응답 헤더는 null 일 수 없습니다.");
-        }
-    }
-
-    private static void validateStatusLine(StatusLine statusLine) {
-        if (statusLine == null) {
-            throw new IllegalArgumentException("응답 라인은 null 일 수 없습니다.");
-        }
     }
 }
